# halcs

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  README.release.md  build.gradle  build_cmake.sh  bump_version_numbers.sh  ci_build.sh  ci_deploy.sh  ci_scanner.sh  ci_show_err_logs.sh  compile.sh  genindex.html  gradle_compile.sh  gradle_uninstall.sh  gradle_update_ver_macros.sh  halcs-architecture.html  halcs-development.html  halcs-installation.html  halcs-tools.html  halcs-usage.html  index.html  init.sh  mdp_broker  objects.inv  packpack  run_valgrind.sh  search.html  searchindex.js  settings.gradle  shutdown.sh  sonar-project.properties  valgrind.supp
examples/: CMakeLists.txt  Makefile  README.deps  acq.c  acq_gen_sw_trigger.c  acq_trigger.c  ad9510_ctl.c  adc_data.c  adc_data2.c  adc_dly.c  build.gradle  client.c  dsp_swap.c  fmc130m_4ch_ctl.c  fmc130m_eeprom_ctl.c  fmc250m_4ch_sleep.c  fmc250m_4ch_test_mode.c  fmc_active_clk_ad9510_ctl.c  fpga_info.c  leds.c  monit_amp.c  monit_pos.c  plot_data.sh  rffe_ctl.c  si571_ctl.c  test_data_en.c  timing.c  trigger.c
examples/cmake/Modules/: TestHalcsexamplesVersion.cmake
examples/include/: halcs_examples.h  halcs_examples_classes.h
examples/scripts/: cfg_fofb.sh  reformat_fofb_packet.py
examples/src/: acq.c  acq_prop.c  acq_sp.c  acq_trigger.c  clk_cnt.c  dsp_swap.c  fmc130m_4ch_ctl.c  fmc_active_clk_ad9510_ctl.c  fofb_ctrl.c  fofb_processing.c  fpga_info.c  monit_amp.c  pos_calc.c  rffe_ctl.c  rtmlamp_ohwr_ctl.c  si571_ctl.c  trigger.c
ldconf/: CMakeLists.txt  halcs.conf.in  ldconf.mk
libs/acqclient/: CMakeLists.txt  Makefile  README.deps  build.gradle  compile.sh
libs/acqclient/cmake/: acqclientConfig.cmake.in
libs/acqclient/include/: acq_client.h  acq_client_classes.h  acq_client_core.h  acq_client_prelude.h  acq_client_revision.h
libs/acqclient/src/: acq_client_core.c  acq_client_revision.c  libacqclient.pc.in
libs/bpmclient/: CMakeLists.txt  Makefile  README.deps  build.gradle  compile.sh
libs/bpmclient/cmake/: bpmclientConfig.cmake.in
libs/bpmclient/include/: bpm_client.h  bpm_client_classes.h  bpm_client_core.h  bpm_client_prelude.h  bpm_client_revision.h
libs/bpmclient/src/: bpm_client_core.c  bpm_client_revision.c  libbpmclient.pc.in
libs/convc/: CMakeLists.txt  Makefile  build.gradle
libs/convc/cmake/: convcConfig.cmake.in
libs/convc/include/: convc_classes.h
libs/convc/src/: convc_err.c  libconvc.pc.in
libs/errhand/: CMakeLists.txt  Makefile  README.deps  build.gradle
libs/errhand/cmake/: errhandConfig.cmake.in
libs/errhand/include/: errhand.h  errhand_classes.h  errhand_local_print.h  errhand_prelude.h  errhand_print.h  varg_macros.h
libs/errhand/src/: errhand_local_print.c  liberrhand.pc.in
libs/halcsclient/: CMakeLists.txt  Makefile  build.gradle
libs/halcsclient/cmake/: halcsclientConfig.cmake.in
libs/halcsclient/include/: halcs_client_classes.h  halcs_client_core.h  halcs_client_err.h  halcs_client_rw_param.h  halcs_client_rw_param_codes.h
libs/hutils/: CMakeLists.txt  Makefile  README.deps  build.gradle  compile.sh
libs/hutils/cmake/: hutilsConfig.cmake.in
libs/hutils/include/: hutils.h  hutils_classes.h  hutils_err.h  hutils_prelude.h  hutils_sharelib.h  hutils_symload.h  hutils_utils.h
libs/hutils/src/: hutils_symload.c  hutils_utils.c  libhutils.pc.in
libs/llio/: CMakeLists.txt  Makefile  build.gradle  version.sh
libs/llio/cmake/: llioConfig.cmake.in
libs/llio/include/: ll_io_classes.h  ll_io_core.h  ll_io_eth.h
libs/llio/src/: libllio.pc.in  ll_io_dev_info.c
libs/sdbfs/: CMakeLists.txt  Makefile  build.gradle
libs/sdbfs/cmake/: sdbfsConfig.cmake.in
libs/sdbfs/include/: libsdbfs.h
libs/sdbfs/src/: libsdbfs.pc.in
libs/sdbfs/tools/: sdb-extract.c
libs/sdbutils/: CMakeLists.txt  Makefile  build.gradle
libs/sdbutils/cmake/: sdbutilsConfig.cmake.in
libs/sdbutils/include/: sdbutils_classes.h  sdbutils_core.h  sdbutils_err.h  sdbutils_prelude.h
libs/sdbutils/src/: libsdbutils.pc.in
src/apps/: CMakeLists.txt
src/apps/ebpm/: dev_io.c  ebpm.c  ebpm.mk  ebpm_cfg.c
src/apps/halcs_generic_udev/: CMakeConfigureInstall.cmake  CMakeLists.txt  halcs_generic_udev.mk
src/apps/halcsd/: CMakeConfigureInstall.cmake  CMakeFixCPackPaths.cmake  CMakeLists.txt  halcsd.c  halcsd.mk  halcsd_cfg.c  postinst.debian.in  postinst.redhat.in
src/boards/: CMakeLists.txt
src/boards/afcv3/: CMakeLists.txt  acq_chan.c  board.mk  chips_addr.c  ddr3_map.c  device_mapping.c  epics_mapping.c
src/boards/afcv3_1/: CMakeLists.txt  acq_chan.c  board.mk  chips_addr.c  ddr3_map.c  device_mapping.c  epics_mapping.c
src/boards/common/: CMakeLists.txt  chips_addr_common.c  common.mk
src/boards/ml605/: CMakeLists.txt  acq_chan.c  board.mk  chips_addr.c  ddr3_map.c  device_mapping.c  epics_mapping.c  revision.mk
src/client/: CMakeLists.txt  Makefile
src/client/cmake/: cmake_uninstall.cmake.in
src/client/include/: halcs_client_classes.h  halcs_client_codes.h  halcs_client_core.h  halcs_client_err.h  halcs_client_prelude.h  halcs_client_rw_param.h
src/client/src/: halcs_client_core.c  halcs_client_err.c  halcs_client_revision.c  halcs_client_rw_param.c  libhalcsclient.pc.in
src/dev_io/: CMakeLists.txt  dev_io.c  dev_io.mk  dev_io_cfg.c  dev_io_core.c  dev_io_core.h  dev_io_err.c  dev_io_err.h  dev_io_proto.c  dev_io_utils.c
src/dev_mngr/: CMakeLists.txt  dev_mngr.c  dev_mngr.mk  dev_mngr_core.c  dev_mngr_core.h  dev_mngr_dev_info.c  dev_mngr_dev_info.h  dev_mngr_err.c
src/msg/: CMakeLists.txt  msg.c  msg.h  msg.mk  msg_err.c  msg_err.h  msg_macros.h
src/msg/exp_ops/: CMakeLists.txt  exp_msg_zmq.c  exp_ops_codes.h  ops.mk
src/msg/smio_thsafe_ops/: CMakeLists.txt  ops.mk  smio_thsafe_zmq_client.c  (+3 more)
src/revision/: CMakeLists.txt  revision.c  revision.h  revision.mk
src/sm_io/: CMakeLists.txt  sm_io.c  sm_io.h  sm_io.mk  sm_io_bootstrap.c  sm_io_bootstrap.h  sm_io_cfg.c  sm_io_err.c  sm_io_err.h  sm_io_exports.h
src/sm_io_table/: CMakeLists.txt  sm_io_codes.c  sm_io_codes.h  sm_io_table.mk
(+1413 files in other folders)
